<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.4.2</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>
  <groupId>org.mvnsearch</groupId>
  <artifactId>pkl-demo</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <java.version>21</java.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <pkl.version>0.27.2</pkl.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.pkl-lang</groupId>
      <artifactId>pkl-spring</artifactId>
      <version>0.17.1</version>
    </dependency>
    <dependency>
      <groupId>org.pkl-lang</groupId>
      <artifactId>pkl-config-java</artifactId>
      <version>${pkl.version}</version>
    </dependency>
    <dependency>
      <groupId>org.pkl-lang</groupId>
      <artifactId>pkl-core</artifactId>
      <version>${pkl.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.11.4</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <parameters>true</parameters>
          <compilerArgs>
            <compilerArg>--enable-preview</compilerArg>
          </compilerArgs>
        </configuration>
      </plugin>
      <!-- generate java code from pkl -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <phase>generate-sources</phase>
            <goals>
              <goal>java</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <mainClass>org.pkl.codegen.java.Main</mainClass>
          <arguments>
            <argument>${project.basedir}/src/main/resources/PigeonConfig.pkl</argument>
            <argument>-o</argument>
            <argument>src/main</argument>
            <argument>--generate-getters</argument>
            <argument>--generate-spring-boot</argument>
          </arguments>
          <includePluginDependencies>true</includePluginDependencies>
          <includeProjectDependencies>false</includeProjectDependencies>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.pkl-lang</groupId>
            <artifactId>pkl-tools</artifactId>
            <version>${pkl.version}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

</project>
